# python-interview

./: .gitignore  00_TABLE_OF_CONTENTS.md  01_log_parsing.py  02_system_commands.py  03_api_checks.py  04_data_structures.py  05_algorithm_warmup.py  06_bash_alternatives.sh  07_concurrency.py  08_unit_tests.py  10_k8s_debugging.py  11_k8s_chaos_generator.py  13_gitops_setup.py  14_fluxcd_setup.py  ADVANCED_DEPLOYMENT_STRATEGIES.md  ADVANCED_DEVOPS_ALGO_GUIDE.md  CHEAT_SHEET_PYTHON_VS_BASH.md  FAANG_REVIEW.md  FLUXCD_OPERATIONS.md  FROM_SCRIPT_TO_MODULE.md  GITOPS_TOOLS.md  INTERVIEW_MASTER_GUIDE.md  INTERVIEW_PREP.md  INTERVIEW_PSEUDOCODE_GUIDE.md  PSEUDOCODE_METHODOLOGY.md  PYTHON_CONCEPTS.md  README.md  pyproject.toml  requirements.txt
docs/: FROM_SCRIPT_TO_MODULE.md  GIT_INTERVIEW_GUIDE.md  INTERVIEW_MASTER_GUIDE.md  INTERVIEW_PREP.md  INTERVIEW_PSEUDOCODE_GUIDE.md  KUBERNETES_CONCEPTS.md  LESSON_PLAN.md  PSEUDOCODE_LIBRARY.md  PSEUDOCODE_METHODOLOGY.md
scripts/: 00_python_basics.py  01_log_parsing.py  09_framework_showcase.py  10_k8s_debugging.py  11_k8s_chaos_generator.py  12_k8s_resolution_advisor.py  13_gitops_setup.py  14_fluxcd_setup.py  15_flux_python_manager.py  99_complete_setup.py  advanced_devops_algos.py  faang_concurrency_deep_dive.py  faang_system_design_sims.py  interview_practice_set.py  reconstruct_sentence.py
scripts/foundations/: 07_concurrency.py  (+1 more)
tests/: test_faang_challenges.py  test_k8s.py  test_system.py
verisign_prep/: 01_log_parsing.py  02_system_commands.py  03_api_checks.py  04_data_structures.py  05_algorithm_warmup.py  LESSON_PLAN.md
(+14 files in other folders)
